--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "4",
-    "mongoose": "^7.4.3",
+    "mongoose": ">=14.20.1",
     "morgan": "^1.10.0",
     "socket.io": "^4.7.2"
   }
